# kaleidoscope

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/ast/: BinaryExprAST.cpp  CallExprAST.cpp  ForExprAST.cpp  FunctionAST.cpp  IfExprAST.cpp  NumberExprAST.cpp  PrototypeAST.cpp  VariableExprAST.cpp
src/include/: KaleidoscopeJIT.hpp  main.hpp
src/include/ast/: BinaryExprAST.hpp  CallExprAST.hpp  ExprAST.hpp  ForExprAST.hpp  FunctionAST.hpp  IfExprAST.hpp  NumberExprAST.hpp  PrototypeAST.hpp  VariableExprAST.hpp
src/include/lexer/: lexer.hpp  token.hpp
src/include/logger/: logger.hpp
src/include/parser/: parser.hpp
src/include/util/: global.hpp
src/lexer/: lexer.cpp
src/logger/: logger.cpp
src/parser/: parser.cpp
src/util/: global.cpp
